--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url("/Portofolio_Homework/assests/images/gravel.png");
+    background: url("/assests/images/gravel.png");
     background-attachment: fixed;
     /* background-size: cover; */
     /* background-repeat: no-repeat; */
